--- a/template/gradle.properties
+++ b/template/gradle.properties
@@ -1,2 +1,2 @@
-springBootVersion=2.2.6.RELEASE
-springDependencyManager=1.0.9.RELEASE
+springBootVersion=3.1.2
+springDependencyManager=1.0.15.RELEASE
