--- a/template/gradle.properties
+++ b/template/gradle.properties
@@ -1,2 +1,2 @@
-springBootVersion=2.2.6.RELEASE
-springDependencyManager=1.0.9.RELEASE
+springBootVersion={%- if params.springBoot2 %}2.7.15{% else %}3.1.3{% endif %}
+springDependencyManager=1.1.3
