--- a/package.json
+++ b/package.json
@@ -110,6 +110,11 @@
         "description": "Generate template files for the Spring Boot version 2. For kafka protocol it will also force to use spring-kafka 2.9.9",
         "default": false,
         "required": false
+      },
+      "maven": {
+        "description": "Generate pom.xml Maven build file instead of Gradle build",
+        "default": false,
+        "required": false
       }
     },
     "generator": ">=1.8.27 <2.0.0",
