--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -11,8 +11,12 @@
       "avatar_url": "https://avatars1.githubusercontent.com/u/4137916?v=4",
       "profile": "https://github.com/Tenischev",
       "contributions": [
+        "maintenance",
         "doc",
-        "code"
+        "code",
+        "bug",
+        "review",
+        "test"
       ]
     },
     {
@@ -25,12 +29,48 @@
       ]
     },
     {
+      "login": "derberg",
+      "name": "Lukasz Gornicki",
+      "avatar_url": "https://avatars.githubusercontent.com/u/6995927?v=4",
+      "profile": "https://github.com/derberg/",
+      "contributions": [
+        "review"
+      ]
+    },
+    {
       "login": "amrutprabhu",
       "name": "Amrut Prabhu",
       "avatar_url": "https://avatars.githubusercontent.com/u/8725949?v=4",
       "profile": "http://www.amrutprabhu.com",
       "contributions": [
         "code"
+      ]
+    },
+    {
+      "login": "VaishnaviNandakumar",
+      "name": "Vaishnavi Nandakumar",
+      "avatar_url": "https://avatars.githubusercontent.com/u/41518119?v=4",
+      "profile": "https://github.com/VaishnaviNandakumar",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "taotao100",
+      "name": "taotao100",
+      "avatar_url": "https://avatars.githubusercontent.com/u/7056867?v=4",
+      "profile": "https://github.com/taotao100",
+      "contributions": [
+        "bug"
+      ]
+    },
+    {
+      "login": "jbiscella",
+      "name": "Jacopo Biscella",
+      "avatar_url": "https://avatars.githubusercontent.com/u/7963565?v=4",
+      "profile": "https://github.com/jbiscella",
+      "contributions": [
+        "bug"
       ]
     }
   ],
