--- a/template/src/main/resources/application.yml
+++ b/template/src/main/resources/application.yml
@@ -52,11 +52,11 @@ mqtt:
       connection: {{params.connectionTimeout}}
       {% if server.binding('mqtt') and server.binding('mqtt').keepAlive | isDefined %}keepAlive: {{server.binding('mqtt').keepAlive}}{% endif %}
   topic:
-    {% for channelName, channel in asyncapi.channels() %}{% if channel.hasPublish() %}
-    {{channel.publish().id() | camelCase}}: {{channelName}}
-    {% elif channel.hasSubscribe() %}
-    {{channel.subscribe().id() | camelCase}}: {{channelName}}
-    {% endif %}{% endfor %}
+    {%- for channelName, channel in asyncapi.channels() %}{% if channel.hasPublish() %}
+    {{channel.publish().id() | camelCase}}: {{channelName | toTopicString(channel.hasParameters(), channel.parameters()) }}
+    {%- elif channel.hasSubscribe() %}
+    {{channel.subscribe().id() | camelCase}}: {{channelName | toTopicString(channel.hasParameters(), channel.parameters())}}
+    {%- endif %}{% endfor %}
 {% endif %}{% endfor %}
 
 {%- if asyncapi | isProtocol('kafka') %}
