--- a/template/src/main/resources/application.yml
+++ b/template/src/main/resources/application.yml
@@ -18,10 +18,10 @@ amqp:
     username: {% if server.variable('username') %}{{server.variable('username').defaultValue()}}{% endif %}
     password:
   {% for channelName, channel in asyncapi.channels() %}
-  {{channelName}}:
-    {% if channel.hasSubscribe() %} exchange: {{channel.subscribe().binding('amqp').exchange.name}} {% endif %}
-    {% if channel.hasSubscribe() %} routingKey: {{channel.subscribe().binding('amqp').routingKey}}{% endif %}
-    {% if channel.hasPublish() %} queue: {{channel.publish().binding('amqp').queue.name}}{% endif %}
+  {{channelName | toAmqpNeutral(channel.hasParameters(), channel.parameters())}}:
+    {% if channel.binding('amqp') and channel.binding('amqp').exchange %}exchange: {{channel.binding('amqp').exchange.name}}{% endif %}
+    routingKey: {{channelName | toAmqpKey(channel.hasParameters(), channel.parameters())}}
+    {% if channel.binding('amqp') and channel.binding('amqp').queue %}queue: {{channel.binding('amqp').queue.name}}{% endif %}
   {% endfor %}
   {% endif %}
 
