feat: add support for channel parameters (#352)
* add pattern support for kafka

* add pattern support for mqtt message handling

* use mqtt specific wildcard

* mqtt publish implementation

* adopt interface for other protocols

* update tests

* general amqp routing key support

* fix current amqp methods

* provide arbitrary methods for amqp

* provide arbitrary methods for mqtt

* update tests

* provide arbitrary methods for kafka in message handler

* provide arbitrary methods for kafka in publisher

* update tests

* update readme, resolve missing features, add attention bar

--- a/template/src/main/resources/application.yml
+++ b/template/src/main/resources/application.yml
@@ -18,10 +18,10 @@ amqp:
     username: {% if server.variable('username') %}{{server.variable('username').defaultValue()}}{% endif %}
     password:
   {% for channelName, channel in asyncapi.channels() %}
-  {{channelName}}:
-    {% if channel.hasSubscribe() %} exchange: {{channel.subscribe().binding('amqp').exchange.name}} {% endif %}
-    {% if channel.hasSubscribe() %} routingKey: {{channel.subscribe().binding('amqp').routingKey}}{% endif %}
-    {% if channel.hasPublish() %} queue: {{channel.publish().binding('amqp').queue.name}}{% endif %}
+  {{channelName | toAmqpNeutral(channel.hasParameters(), channel.parameters())}}:
+    {% if channel.binding('amqp') and channel.binding('amqp').exchange %}exchange: {{channel.binding('amqp').exchange.name}}{% endif %}
+    routingKey: {{channelName | toAmqpKey(channel.hasParameters(), channel.parameters())}}
+    {% if channel.binding('amqp') and channel.binding('amqp').queue %}queue: {{channel.binding('amqp').queue.name}}{% endif %}
   {% endfor %}
   {% endif %}
 
@@ -52,11 +52,11 @@ mqtt:
       connection: {{params.connectionTimeout}}
       {% if server.binding('mqtt') and server.binding('mqtt').keepAlive | isDefined %}keepAlive: {{server.binding('mqtt').keepAlive}}{% endif %}
   topic:
-    {% for channelName, channel in asyncapi.channels() %}{% if channel.hasPublish() %}
-    {{channel.publish().id() | camelCase}}: {{channelName}}
-    {% elif channel.hasSubscribe() %}
+    {%- for channelName, channel in asyncapi.channels() %}{% if channel.hasPublish() %}
+    {{channel.publish().id() | camelCase}}: {{channelName | toMqttTopicString(channel.hasParameters(), channel.parameters()) }}
+    {%- elif channel.hasSubscribe() %}
     {{channel.subscribe().id() | camelCase}}: {{channelName}}
-    {% endif %}{% endfor %}
+    {%- endif %}{% endfor %}
 {% endif %}{% endfor %}
 
 {%- if asyncapi | isProtocol('kafka') %}
