add blank files to support WS

--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "supportedProtocols": [
       "kafka",
       "amqp",
-      "mqtt"
+      "mqtt",
+      "ws"
     ],
     "nonRenderableFiles": [
       "**/*.jar"
