add test parameter and fix whitespace control

--- a/tests/mocks/additional-type-formats.yml
+++ b/tests/mocks/additional-type-formats.yml
@@ -42,3 +42,7 @@ components:
             description: Title rating
             type: string
             format: decimal
+          stars:
+            description: "Number of stars. Deprecated: Use rating"
+            type: integer
+            deprecated: true
