fix: add support for decimal min and max #326
Signed-off-by: anessi <16045045+anessi@users.noreply.github.com>

--- a/tests/mocks/additional-type-formats.yml
+++ b/tests/mocks/additional-type-formats.yml
@@ -46,3 +46,15 @@ components:
             description: "Number of stars. Deprecated: Use rating"
             type: integer
             deprecated: true
+          length:
+            description: Length of the song in minutes
+            type: number
+            format: float
+            minimum: 0.5
+            maximum: 10.5
+          playtime:
+            description: Playtime of the song in minutes
+            type: number
+            format: double
+            exclusiveMinimum: 1.5
+            exclusiveMaximum: 11.5
