fix: use parameter generateTimestamp to suppress timestamp in @Generated annotation #433
Signed-off-by: anessi <16045045+anessi@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -117,9 +117,14 @@
         "description": "Generate pom.xml Maven build file instead of Gradle build",
         "default": false,
         "required": false
+      },
+      "generateTimestamp": {
+        "description": "Adds the generation timestamp to the @Generated annotation",
+        "default": "true",
+        "required": false
       }
     },
-    "generator": ">=1.8.27 <2.0.0",
+    "generator": ">=1.8.27",
     "filters": [
       "@asyncapi/generator-filters"
     ],
