--- a/package.json
+++ b/package.json
@@ -119,7 +119,7 @@
         "required": false
       }
     },
-    "generator": ">=2.0.0 <3.0.0",
+    "generator": ">=1.8.27",
     "filters": [
       "@asyncapi/generator-filters"
     ],
